# stm32-cmake

cmake/stm32/: linker_ld.cmake  utilities.cmake
projects/flash/: .clangd  CMakeLists.txt  build.ps1  path_helper.ps1  stm32f1xx_hal_conf.h
